fix: spacing homepage

--- a/src/styles/components/events-slider.css
+++ b/src/styles/components/events-slider.css
@@ -147,7 +147,7 @@
 		}
 
 		.arrow-link {
-			margin: 0%;
+			margin: 40px 0;
 			display: block;
 		}
 		@media (max-width: 768px) {
