--- a/src/styles/components/slider-style.css
+++ b/src/styles/components/slider-style.css
@@ -66,9 +66,9 @@
 		img {
 			position: absolute;
 			left: -20%;
-			top: 25%;
-			height: 270px;
-			object-fit: contain;
+			top: 10%;
+			height: 100%;
+			object-fit: cover;
 			width: 350px;
 			opacity: 0.6;
 			padding: 20px;
