--- a/src/styles/components/titles.css
+++ b/src/styles/components/titles.css
@@ -185,3 +185,6 @@
 		display: none;
 	}
 }
+p {
+	cursor: default;
+}
